--- a/src/assets/styles/_reference.scss
+++ b/src/assets/styles/_reference.scss
@@ -8,24 +8,111 @@
 }
 .refer__inner {
     h2 {
-        color: var(--black);
+        // color: var(--black);
+        color: var(--white);
         font-size: 2rem;
         margin-bottom: 1rem;
     }
-    table {
-        border-top: 1px solid var(--black);
-        border-bottom: 2px solid var(--black);
-        color: var(--black);
+    // table {
+    //     border-top: 1px solid var(--black);
+    //     border-bottom: 2px solid var(--black);
+    //     color: var(--black);
 
-        thead {
-            display: none;
+    //     thead {
+    //         display: none;
+    //     }
+
+    //     td {
+    //         border-top: 1px solid var(--black);
+    //         padding: 1.4rem 0;
+    //         font-family: var(--subKor_font);
+    //         font-weight: 300;
+    //     }
+    // }
+}
+
+.refer__list {
+    border-top: 2px solid var(--light_bg);
+    border-bottom: 1px solid var(--light_bg);
+
+    a {
+        display: block;
+        color: var(--white);
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 1px solid var(--light_bg);
+        padding: 1.3rem 0;
+        transition: all 0.3s;
+        font-family: var(--subKor_font);
+
+        &:hover {
+            background: rgba($color: #fff, $alpha: 0.7);
+            color: var(--black);
+        }
+
+        span {
+            display: inline-block;
+        }
+        span:nth-child(1){
+            text-align: center;
+            width: 6%;
+        }
+        span:nth-child(2){
+            width: 20%;
+        }
+        span:nth-child(3){
+            width: 64%;
+        }
+        span:nth-child(4){
+            text-align: center;
+            width: 10%;
+        }
+    }
+}
+
+.refer__table {
+    padding-top: 200px;
+    color: var(--white);
+    font-family: var(--subKor_font);
+
+    h3 {
+        font-size: 3rem;
+    }
+
+    p {
+        background-color: var(--light_bg);
+        color: var(--black);
+        padding: 1.4em;
+    }
+
+    .table {
+        color: var(--white);
+        font-family: var(--subKor_font);
+        border: 1px solid var(--light_bg);
+        margin-top: 0.5em;
+
+        tr {
+            
+        }
+
+        th, td {
+            font-weight: normal;
+            padding: 1em;
+            border-bottom: 1px solid var(--light_bg);
+            border-left: 1px solid var(--light_bg);
         }
 
         td {
-            border-top: 1px solid var(--black);
-            padding: 1.4rem 0;
-            font-family: var(--subKor_font);
-            font-weight: 300;
+            
+        }
+
+        thead {
+            
+        }
+        tbody {
+
         }
     }
 }
