--- a/src/assets/styles/_reference.scss
+++ b/src/assets/styles/_reference.scss
@@ -120,6 +120,9 @@
                     }
                     &:hover {
                         color: burlywood;
+                        &::before {
+                            background-color: burlywood;
+                        }
                     }
                 }
             }
