--- a/src/style.scss
+++ b/src/style.scss
@@ -34,7 +34,10 @@
 @import "./assets/styles/reference";
 
 //script
-@import "./assets/styles/script";
+// @import "./assets/styles/script";
+
+//movie
+@import "./assets/styles/movie";
 
 //youtube
 @import "./assets/styles/youtube";
