--- a/src/assets/styles/_loading.scss
+++ b/src/assets/styles/_loading.scss
@@ -12,10 +12,12 @@
 
 #loading.loading__active {
     opacity: 1;
-    // transition: all 1.6s;
+    transition: all 1.6s;
+    z-index: 999999;
 }
 
 #loading {
+    z-index: -1;
     opacity: 0;
     position: fixed;
     top: 0;
@@ -23,7 +25,6 @@
     width: 100%;
     height: 100%;
     background: var(--black);
-    z-index: 99999;
     transition: all 1.6s;
 }
 
