--- a/src/assets/styles/_reference.scss
+++ b/src/assets/styles/_reference.scss
@@ -3,7 +3,6 @@
     // background-color: var(--black);
     min-height: 100vh;
     padding-bottom: 20vw;
-
 }
 .refer__inner {
     opacity: 0;
@@ -82,10 +81,20 @@
         font-size: 3rem;
     }
 
-    p {
-        background-color: var(--light_bg);
-        color: var(--black);
-        padding: 1.4em;
+    .img_p_wrap {
+        display: flex;
+
+        img {
+            width: 100%;
+            height: 20%;
+            background-position: center center;
+        }
+    
+        p {
+            background-color: var(--light_bg);
+            color: var(--black);
+            padding: 1.4em;
+        }
     }
 
     .table {
@@ -143,3 +152,4 @@
         }
     }
 }
+
